Fixed bug with margins when header-ad is visible

--- a/wp-content/themes/osqledaren/assets/css/_footer.scss
+++ b/wp-content/themes/osqledaren/assets/css/_footer.scss
@@ -23,7 +23,10 @@ body:before { /* Opera min-height 100% Fix */
 .page_content {
 	//padding: $header-height + 40px 0 40px; /* Give top padding to clear fixed header */
 	padding: $footer-height+$header-height+40px 0 40px; /* Give top padding to clear fixed header */
-
+}
+.page_content.width_header_ad {
+	//padding: $header-height + 40px 0 40px; /* Give top padding to clear fixed header */
+	padding: $footer-height+$header-height+40px-144px+30px 0 40px; /* Give top padding to clear fixed header */
 }
 
 #footer {
